--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -3,7 +3,7 @@
     <h1 style="padding-bottom: 25px;">GALLERY</h1>
     <div class="row collapse in" id="gallery-1">
       <div class="col-md-3 col-sm-6">
-        <a href="JavaScript:Void(0);" (click)="openDialogForDashboard()">
+        <a href="#" (click)="openDialogForDashboard()">
           <div class="thumbnail">
             <img src="../../../assets/images/dashboard.png"
               alt="">
@@ -15,7 +15,7 @@
       </div>
 
       <div class="col-md-3 col-sm-6">
-        <a href="JavaScript:Void(0);" (click)="openDialogForCalculator()">
+        <a href="#" (click)="openDialogForCalculator()">
           <div class="thumbnail">
             <img src="../../../assets/images/calculator.png"
               alt="">
