--- a/src/app/components/dialog/dialog.component.css
+++ b/src/app/components/dialog/dialog.component.css
@@ -32,6 +32,7 @@ p {
 
 .mat-card-actions {
     text-align: center;
+    clear: both;
 }
 
 .mat-raised-button:first-child  {
@@ -66,7 +67,7 @@ span:not(:last-child) {
     }
 
     p {
-        font-size: 26px;
+        font-size: 22px;
     }
     .mat-raised-button {
         line-height: 36px;
