added portfolio page in gallery

--- a/src/app/components/gallery/gallery.component.css
+++ b/src/app/components/gallery/gallery.component.css
@@ -28,6 +28,12 @@
     background-size: cover;
 }
 
+.thumbnail {
+    padding: 0;
+    border: none;
+    border-radius: 0;
+}
+
 a, a:hover, a:active, a:visited {
     text-decoration: none;
 }
