--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -26,13 +26,15 @@
         </a>
       </div>
       <div class="col-md-3 col-sm-6">
-          <div class="thumbnail">
-            <img src="../../../assets/images/placeholder.png"
-              alt="">
-          </div>
-          <div class="proj-title">
-            <h4>Placeholder</h4>
-          </div>
+          <a href="#" (click)="openDialogForPortfolio()">
+            <div class="thumbnail">
+              <img src="../../../assets/images/portfolio.png"
+                alt="">
+            </div>
+            <div class="proj-title">
+              <h4>Portfolio Page</h4>
+            </div>
+          </a>
       </div>
       <div class="col-md-3 col-sm-6">
           <div class="thumbnail">
