--- a/src/app/components/intro/intro.component.html
+++ b/src/app/components/intro/intro.component.html
@@ -2,10 +2,10 @@
     <div class="intro-panel">
       <h1 style="padding-bottom: 25px;">EVAN NGUYEN</h1>
       <p>
-        Vietnam is one of our favourite countries, packed with history, stunning landscapes, cultural highlights and amazing food. It’s one of the most exciting destinations in South East Asia.
+        I am a passionate web developer seeking opportunities to build useful website and applications to fulfill the need of clients.
       </p>
       <p>
-        The Vietnamese can be some of the nicest, friendliest, kindest and happiest people you could meet. They’re charming without being pushy, helpful, lovers of children and just genuinely nice. Of course there are some bad apples and most of the bad stories involve taxi driver scams, but in all our time in Vietnam we’ve seen only good
+        On front end, I specialize in Angular 6+, Jquery and Javascript.
       </p>
     </div>
 </section>
