--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -17,7 +17,7 @@
       <div class="contact-info">
         <h2>
           <i class="fas fa-2x fa-phone-square"></i>
-          <span class="info">Phone: +84-984-475-689</span>
+          <span class="info">Phone: 04 089 629</span>
         </h2>
       </div>
       <div class="contact-info">
