--- a/src/app/components/contact/contact.component.html
+++ b/src/app/components/contact/contact.component.html
@@ -22,8 +22,8 @@
       </div>
       <div class="contact-info">
         <h2>
-          <i class="fab fa-2x fa-linkedin"></i>
-          <a class="info" href="">LinkedIn</a>
+          <i class="fab fa-2x fa-github-square"></i>
+          <a class="info" href="https://github.com/evannguyen85">GitHub</a>
         </h2>
       </div>
     </div>
