--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,5 @@
 <div style="position: relative; display: block; width: 101%;">
-  <img style="margin-left: -4px; margin-bottom: -5px;" appResponsiveImage="../../../assets/images/bg.png">
+  <img style="margin-left: -4px; margin-bottom: -5px;" appResponsiveImage="../../../assets/images/bg-min.png">
 </div>
 
 <!-- <div class="bg-image"></div> -->
