--- a/src/app/components/intro/intro.component.html
+++ b/src/app/components/intro/intro.component.html
@@ -1,11 +1,12 @@
 <section id="intro">
     <div class="intro-panel">
-      <h1 style="padding-bottom: 25px;">EVAN NGUYEN</h1>
+      <h1 style="padding-bottom: 20px;">EVAN NGUYEN</h1>
       <p>
-        I am a passionate web developer seeking opportunities to build useful website and applications to fulfill the need of clients.
+        I am a passionate front-end web developer with a bachelor degree in Electronics and Telecommunications and a master degree in Business Information Systems. I've always enjoyed spending my days coding, so when I am not in the office,
+        I spend time to work on pet projects and taking programming and web development courses as well as reading related books.
       </p>
       <p>
-        On front end, I specialize in Angular 6+, Jquery and Javascript.
+        I am currently seeking opportunities to work on exciting projects and creating useful applications for clients. I am a fast learner and can quickly integrate into a team and start contribuition in short time.
       </p>
     </div>
 </section>
