--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -2,14 +2,16 @@
   <div class="about-panel">
     <h1 style="padding-bottom: 25px;">ABOUT ME</h1>
     <p>
-      My name is Evan. I am a web developer. I am currently developing my portfolio website and will populate contents into the gallery once I am done.
+      My name is Evan. I am a web developer. I am picking up web development courses and working on portfolio projects to grow up my knowledge and skills and am also looking for a contract, full-time or permanent position in web development.
     </p>
     <p>
-      10 years ago, I started my professional career as a Production Engineer working in a computer chip making factory.
-      I love coding. During the time at Intel, I always looked for opportunities to code and automate my routine jobs.
-      I decided to become a professional software developer, so I joined a software development company.
+      I started my career as an engineer at <a href="https://www.intel.com/">Intel</a> building computer chips. While there, in addition to normal duties, in response to a need, I wrote multiple application programs to faciliate manufacturing data analysis and automate repitive tasks. I've always found coding fascinated and am motivated by solving difficult problems,
+      so to me, software development is an obvious path. Therefore, last year, I left the high tech world to pursue a professional career in software industry by joining a software development company (<a href="https://www.tmasolutions.com/">TMA Solutions</a>) as a front-end web developer. Here, I was involved in a real web development project and learned how to use
+      programming languages and techniques to transform web design and client's specifications into reality as well as Scrum/Agile software development methodology. This is just a start as there are still many great things in the field to learn. I am a true learner and committed life-long for learning to develop myself to become a better developer.
     </p>
-    <p><a href="">Resume</a></p>
-    <p><a href="">Cover Letter</a></p>
+    <p>
+      I want to spend my days coding and my goal is to find a job that I can utilize my programming knowledge and skills to build useful applications for clients, contribute to the success of the organization while satisfy my desire.
+    </p>
+    <p><a href="../../../assets/resume/EvanNguyen.Resume.Updated.pdf" target="_blank">Resume</a></p>
   </div>
 </section>
