--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -6,7 +6,7 @@
     padding-top: 80px;
     text-align: center;
     background-color: #303030;
-    color: white;
+    color: #f1f1f1;
 }
 
 .contact-panel {
@@ -62,7 +62,7 @@
     .info {
         padding-left: 10px;
     }
-    
+
     .contact-info {
         padding-left: 15px;
         padding-bottom: 15px;
@@ -82,10 +82,10 @@
     .info {
         padding-left: 5px;
     }
-      
+
     .contact-panel {
         width: 80%;
-        padding: 15px;        
+        padding: 15px;
     }
 }
 
