--- a/src/app/components/gallery/gallery.component.css
+++ b/src/app/components/gallery/gallery.component.css
@@ -16,7 +16,7 @@
     padding: 10px;
     border-radius: 5px;
     z-index: 10;
-    color: white;
+    color: #f1f1f1;
     transform: translateZ(100px);
 }
 
