--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -8,7 +8,7 @@
     /* background-color: rgb(0,0,0);  */
     /* Black w/opacity/see-through */
     /* background-color: rgba(0,0,0, 0.5);  */
-    color: white;
+    color: #f1f1f1;
     font-weight: bold;
     /* border: 2px solid #f1f1f1; */
     position: absolute;
@@ -63,7 +63,7 @@ hr {
 @media screen and (min-width: 600px) {
     .bg-text > h2 {
         font-size: 34px;
-    } 
+    }
 }
 
 @media screen and (min-width: 768px) {
