--- a/src/app/components/intro/intro.component.css
+++ b/src/app/components/intro/intro.component.css
@@ -17,7 +17,7 @@
     text-align: left;
     padding: 10px;
     border-radius: 5px;
-    color: white;
+    color: #f1f1f1;
     z-index: 10;
     transform: translateZ(100px);
 }
@@ -48,7 +48,7 @@ h1 {
     p {
         font-size: 24px;
     }
-    
+
     .intro-panel {
         width: 80%;
         padding: 15px;
