--- a/src/app/components/techs/techs.component.html
+++ b/src/app/components/techs/techs.component.html
@@ -32,7 +32,7 @@
       <div class="col-md-3 col-sm-3 col-xs-6">
         <h4>
           <img class="techs-logo" src="../../../assets/images/logos/jquery.png" alt="">
-          Jquery
+          jQuery
         </h4>
       </div>
       <div class="col-md-3 col-sm-3 col-xs-6">
