--- a/src/app/components/gallery/gallery.component.html
+++ b/src/app/components/gallery/gallery.component.html
@@ -36,24 +36,28 @@
           </a>
       </div>
       <div class="col-md-3 col-sm-6">
+        <a href="#" (click)="openDialogForStore()">
           <div class="thumbnail">
-            <img src="../../../assets/images/placeholder.png"
+            <img src="../../../assets/images/store.png"
               alt="">
           </div>
           <div class="proj-title">
-            <h4>Placeholder</h4>
+            <h4>Mens' Wear Store (UI)</h4>
           </div>
+        </a>
       </div>
     </div>
     <div class="row collapse" id="gallery-2">
       <div class="col-md-3 col-sm-6">
-        <div class="thumbnail">
-          <img src="../../../assets/images/placeholder.png"
-            alt="">
-        </div>
-        <div class="proj-title">
-          <h4>Placeholder</h4>
-        </div>
+        <a href="#" (click)="openDialogForPatatap()">
+          <div class="thumbnail">
+            <img src="../../../assets/images/patatap.png"
+              alt="">
+          </div>
+          <div class="proj-title">
+            <h4>Patatap Circles</h4>
+          </div>
+        </a>
       </div>
 
       <div class="col-md-3 col-sm-6">
