--- a/src/app/components/contact/contact.component.css
+++ b/src/app/components/contact/contact.component.css
@@ -54,6 +54,10 @@
     display: block;
 }
 
+h1 {
+  font-size: 32px;
+}
+
 @media screen and (min-width: 600px) {
     .contact-panel h2 {
         font-size: 26px;
