--- a/src/app/components/dialog/dialog.component.css
+++ b/src/app/components/dialog/dialog.component.css
@@ -56,8 +56,25 @@ span:not(:last-child) {
   .dialog-card > img {
       display: none;
   }
-  p {
+
+  .mat-card {
+    height: 100%;
+  }
+  .mat-card-content {
+    height: 300px;
+    overflow: auto;
+  }
+
+  .mat-card-header .mat-card-title {
     font-size: 16px;
+  }
+
+  .mat-card-subtitle {
+    display: none;
+  }
+
+  p {
+    font-size: 14px;
 }
 }
 
