--- a/src/app/components/about/about.component.html
+++ b/src/app/components/about/about.component.html
@@ -6,7 +6,7 @@
     </p>
     <p>
       I started my career as an engineer at <a href="https://www.intel.com/">Intel</a> building computer chips. While there, in addition to normal duties, in response to a need, I wrote multiple application programs to faciliate manufacturing data analysis and automate repitive tasks. I've always found coding fascinated and am motivated by solving difficult problems,
-      so to me, software development is an obvious path. Therefore, last year, I left the high tech world to pursue a professional career in software industry by joining a software development company (<a href="https://www.tmasolutions.com/">TMA Solutions</a>) as a front-end web developer. Here, I was involved in a real web development project and learned how to use
+      so to me, software development is an obvious path. Therefore, last year, I left the high tech world to pursue a professional career in software industry by joining a software development company (<a href="https://www.tmasolutions.com/">TMA Solutions</a>) as a web developer. Here, I was involved in a real web development project and learned how to use
       programming languages and techniques to transform web design and client's specifications into reality as well as Scrum/Agile software development methodology. This is just a start as there are still many great things in the field to learn. I am a true learner and committed life-long for learning to develop myself to become a better developer.
     </p>
     <p>
