edit intro to reflect correct title

--- a/src/app/components/intro/intro.component.html
+++ b/src/app/components/intro/intro.component.html
@@ -2,7 +2,7 @@
     <div class="intro-panel">
       <h1 style="padding-bottom: 20px;">EVAN NGUYEN</h1>
       <p>
-        I am a passionate front-end web developer with a bachelor degree in Electronics and Telecommunications and a master degree in Business Information Systems. I've always enjoyed spending my days coding, so when I am not in the office,
+        I am a passionate web developer with a bachelor degree in Electronics and Telecommunications and a master degree in Business Information Systems. I've always enjoyed spending my days coding, so when I am not in the office,
         I spend time to work on pet projects and taking programming and web development courses as well as reading related books.
       </p>
       <p>
